# scilpydeptest

./: pyproject.toml  tox.ini
.github/workflows/: test_package.yml
scilpydeptest/processing/: analysis.py  utils.py
