[build-system]
requires = [
    "setuptools == 75.2.0",
    "wheel == 0.44.0",
    "setuptools_scm == 8.1.0",
    "Cython == 0.29.37",
]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Jon Haitz Legarreta"}, {email = "jon.haitz.legarreta@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    # common dependencies
    "scilpy == 2.0.0",
]
description = "Tractography learning"
dynamic = ["version"]
maintainers = [
  {name = "Jon Haitz Legarreta"}, {email = "jon.haitz.legarreta@gmail.com"}
]
name = "scilpydeptest"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest >= 7.2",
    "pytest-xdist",
]

[project.urls]
homepage = "https://github.com/jhlegarreta/scilpydeptest"
documentation = "https://github.com/jhlegarreta/scilpydeptest"
repository = "https://github.com/jhlegarreta/scilpydeptest"

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default

[tool.setuptools_scm]
write_to = "scilpydeptest/_version.py"
